@@ -150,15 +150,17 @@ class QueryTest < Test::Unit::TestCase
 
   def test_operator_contains
     query = Query.new(:project => Project.find(1), :name => '_')
-    query.add_filter('subject', '~', ['string'])
-    assert query.statement.include?("#{Issue.table_name}.subject LIKE '%string%'")
-    find_issues_with_query(query)
+    query.add_filter('subject', '~', ['uNable'])
+    assert query.statement.include?("LOWER(#{Issue.table_name}.subject) LIKE '%unable%'")
+    result = find_issues_with_query(query)
+    assert result.empty?
+    result.each {|issue| assert issue.subject.downcase.include?('unable') }
   end
   
   def test_operator_does_not_contains
     query = Query.new(:project => Project.find(1), :name => '_')
-    query.add_filter('subject', '!~', ['string'])
-    assert query.statement.include?("#{Issue.table_name}.subject NOT LIKE '%string%'")
+    query.add_filter('subject', '!~', ['uNable'])
+    assert query.statement.include?("LOWER(#{Issue.table_name}.subject) NOT LIKE '%unable%'")
     find_issues_with_query(query)
   end
   
